force-app/main/default/objects/Sustainability_Metrics__c/Sustainability_Metrics__c.object-meta.xml
<CustomObject>
    <label>Sustainability Metrics</label>
    <nameField>
        <label>Sustainability Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sustainability Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>