force-app/main/default/objects/Sustainability_Metrics__c/fields/Carbon_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Footprint__c</fullName>
    <label>Carbon Footprint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>