force-app/main/default/objects/Sustainability_Metrics__c/fields/Landfill_Avoidance__c.field-meta.xml
<CustomField>
    <fullName>Landfill_Avoidance__c</fullName>
    <label>Landfill Avoidance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>