force-app/main/default/objects/Sustainability_Metrics__c/fields/Recycled_Materials__c.field-meta.xml
<CustomField>
    <fullName>Recycled_Materials__c</fullName>
    <label>Recycled Materials</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>