force-app/main/default/objects/Sustainability_Metrics__c/fields/Waste_Diversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Waste_Diversion_Rate__c</fullName>
    <label>Waste Diversion Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>